--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group 'org.obapanel.jedis'
-version '1.3-SNAPSHOT'
+version '1.3.0'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
