--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,10 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.28.2'
-    testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.2'
+    testCompile group: 'org.powermock', name: 'powermock-core', version: '2.0.9'
+    testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
+    testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'
+
     // sadly doesnt work
     // testCompile 'com.github.fppt:jedis-mock:0.1.14' 
 }
