--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'org.obapanel.jedis'
-version '1.6.0'
+version '1.6.1'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -17,8 +17,9 @@ dependencies {
     compile 'redis.clients:jedis:3.1.0'
     compile 'org.slf4j:slf4j-api:1.7.25'
     compile 'org.slf4j:slf4j-simple:1.7.25'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation group: 'org.javassist', name: 'javassist', version: '3.28.0-GA'
 
+    testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.28.2'
     testCompile group: 'org.powermock', name: 'powermock-core', version: '2.0.9'
     testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
