--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: java
 jdk: openjdk8
+before_script:
+  - chmod +x gradlew
 script:
   - ./gradlew build
 #  - ./gradlew build --scan -s
+  - ./gradlew codeCoverageReport
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
