--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'java'
+    id 'maven'
     id 'maven-publish'
+    id 'jacoco'
 }
 
 group 'org.obapanel.jedis'
@@ -44,4 +46,23 @@ publishing {
             from(components.java)
         }
     }
+}
+
+task codeCoverageReport(type: JacocoReport) {
+    executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
+
+    subprojects.each {
+        sourceSets it.sourceSets.main
+    }
+
+    reports {
+        xml.enabled true
+        xml.destination file("${buildDir}/reports/jacoco/report.xml")
+        html.enabled false
+        csv.enabled false
+    }
+}
+
+codeCoverageReport.dependsOn {
+    subprojects*.test
 }
