--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: java
 jdk: openjdk8
 before_script:
   - chmod +x gradlew
+  - ./gradlew assemble
 script:
   - ./gradlew build
 #  - ./gradlew build --scan -s
