--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,10 @@ before_script:
   - chmod +x gradlew
   - ./gradlew assemble
 script:
-  - ./gradlew build
+  - ./gradlew clean build
+  # - ./gradlew clean build --scan -s
   #  - ./gradlew build --scan -s
-  - ./gradlew codeCoverageReport
+  # - ./gradlew codeCoverageReport
+  - ./gradlew jacocoTestReport
 after_success:
   - bash <(curl -s https://codecov.io/bash)
