--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.7.32'
     compile 'org.slf4j:slf4j-simple:1.7.32'
     implementation group: 'org.javassist', name: 'javassist', version: '3.28.0-GA'
+    implementation 'javax.cache:cache-api:1.1.1'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.28.2'
