--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     compile 'org.slf4j:slf4j-simple:1.7.32'
     implementation group: 'org.javassist', name: 'javassist', version: '3.28.0-GA'
     implementation 'javax.cache:cache-api:1.1.1'
+    implementation 'org.jsr107.ri:cache-ri-impl:1.1.1' //TODO to be deteled
+
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.28.2'
