--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,11 @@
 plugins {
     id 'java'
-    id 'maven'
-    id 'maven-publish'
     id 'jacoco'
+    id 'maven-publish'
 }
 
 group 'org.obapanel.jedis'
-version '2.2.0'
+version '2.4.0'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -16,19 +15,19 @@ repositories {
 }
 
 dependencies {
-    compile 'redis.clients:jedis:3.6.3'
-    compile 'org.slf4j:slf4j-api:1.7.32'
-    compile 'org.slf4j:slf4j-simple:1.7.32'
+    implementation 'redis.clients:jedis:3.6.3'
+    implementation 'org.slf4j:slf4j-api:1.7.32'
+    implementation 'org.slf4j:slf4j-simple:1.7.32'
     implementation group: 'org.javassist', name: 'javassist', version: '3.28.0-GA'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.28.2'
-    testCompile group: 'org.powermock', name: 'powermock-core', version: '2.0.9'
-    testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
-    testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.28.2'
+    testImplementation group: 'org.powermock', name: 'powermock-core', version: '2.0.9'
+    testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
+    testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'
 
     // sadly doesnt work
-    // testCompile 'com.github.fppt:jedis-mock:0.1.14' 
+    // testImplementation 'com.github.fppt:jedis-mock:0.1.14'
 }
 
 jacocoTestReport {
@@ -39,20 +38,15 @@ jacocoTestReport {
 }
 
 publishing {
+
     repositories {
         maven {
             name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/oscar-besga-panel/InterruptingJedisLocks")
+            url = "https://maven.pkg.github.com/oscar-besga-panel/InterruptingJedisLocks"
             credentials {
-                username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
-                password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
+                username = System.getenv("GITHUB_ACTOR")
+                password = System.getenv("GITHUB_TOKEN")
             }
         }
     }
-    publications {
-        gpr(MavenPublication) {
-            from(components.java)
-        }
-    }
 }
-
