--- a/.github/workflows/gradlepublish.yml
+++ b/.github/workflows/gradlepublish.yml
@@ -34,5 +34,8 @@ jobs:
  #     run: gradle publish
       run: ./gradlew publish
       env:
-        USERNAME: ${{ github.actor }}
-        PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+        # USERNAME: ${{ github.actor }}
+        # PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+        # MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+        # MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
