--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'org.obapanel.jedis'
-version '2.6.8'
+version '2.8.0'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -27,8 +27,7 @@ dependencies {
     testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
     testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'
 
-    // sadly doesnt work
-    // testImplementation 'com.github.fppt:jedis-mock:0.1.14'
+    // sadly doesnt work => testImplementation 'com.github.fppt:jedis-mock:0.1.14'
 }
 
 jacocoTestReport {
@@ -45,18 +44,9 @@ publishing {
             name = "GitHubPackages"
             url = uri("https://maven.pkg.github.com/oscar-besga-panel/InterruptingJedisLocks")
             credentials {
-                //username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
-                // username = project.findProperty("gpr.user") ?: System.getenv("MAVEN_USERNAME")
-                //password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
-                // password = project.findProperty("gpr.key") ?: System.getenv("MAVEN_PASSWORD")
                 username = System.getenv("GITHUB_ACTOR")
                 password = System.getenv("GITHUB_TOKEN")
             }
-        }
-    }
-    publications {
-        gpr(MavenPublication) {
-            from(components.java)
         }
     }
 }
