--- a/src/test/resources/jedis.test.properties
+++ b/src/test/resources/jedis.test.properties
@@ -1,8 +1,14 @@
-# default 0
-jedis.test.functionalTestCycles=0
-# default 127.0.0.1
-jedis.test.host=127.0.0.1
-# default 6379
+## default 0
+#jedis.test.functionalTestCycles=0
+## default 127.0.0.1
+#jedis.test.host=127.0.0.1
+## default 6379
+#jedis.test.port=6379
+## default
+#jedis.test.pass=
+
+
+jedis.test.functionalTestCycles=1
+jedis.test.host=mango-oba340-redis
 jedis.test.port=6379
-# default
-jedis.test.pass=
+jedis.test.pass=Vaz2aaDRae4ysZKKdawU
