--- a/src/test/resources/jedis.test.properties
+++ b/src/test/resources/jedis.test.properties
@@ -1,20 +1,4 @@
-# default 0
 jedis.test.functionalTestCycles=1
-
-# default 127.0.0.1
-jedis.test.host=127.0.0.1
-# default 6379
+jedis.test.host=mango-rtx9814-core-01.kite.lab
 jedis.test.port=6379
-# default
-jedis.test.pass=
-
-
-# If we use sentinel for our tests. Default empty or false
-jedis.test.enableSentinel=false
-# Comma separated values with host:port. Default  empty
-jedis.test.sentinel.hosts=
-# Name of sentinel master host. Default empty
-jedis.test.sentinel.master=
-# Sentinel host use AUTH, put here. Default empty
-jedis.test.sentinel.pass=
-
+jedis.test.pass=Vaz2aaDRae4ysZKKdawU
