--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,16 @@
+projectVersion=3.0.2
+javaVersion=1.8
+
+shadowVersion=7.1.2
+
+jedisVersion=3.8.0
+javassistVersion=3.28.0-GA
+slf4jVersion=1.7.36
+
+junitVersion=4.13.2
+# mockitoVersion=2.28.2
+mockitoVersion=4.6.1
+powermockVersion=2.0.9
+
 gpr.user=
 gpr.key=
