--- a/build.gradle
+++ b/build.gradle
@@ -21,21 +21,18 @@ dependencies {
     implementation "org.slf4j:slf4j-api:${slf4jVersion}"
     implementation "org.slf4j:slf4j-simple:${slf4jVersion}"
     implementation group: 'org.javassist', name: 'javassist', version: "${javassistVersion}"
-    implementation 'redis.clients:jedis:4.2.3'
-    implementation 'org.slf4j:slf4j-api:1.7.36'
-    implementation 'org.slf4j:slf4j-simple:1.7.36'
-    implementation group: 'org.javassist', name: 'javassist', version: '3.28.0-GA'
-/*
-   implementation 'redis.clients:jedis:4.2.3'
-    implementation 'org.slf4j:slf4j-api:1.7.36'
-    implementation 'org.slf4j:slf4j-simple:1.7.36'
-    implementation group: 'org.javassist', name: 'javassist', version: '3.28.0-GA'
- */
+
     testImplementation group: 'junit', name: 'junit', version: "${junitVersion}"
     testImplementation group: 'org.mockito', name: 'mockito-core', version: "${mockitoVersion}"
     testImplementation group: 'org.powermock', name: 'powermock-core', version: "${powermockVersion}"
     testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: "${powermockVersion}"
     testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: "${powermockVersion}"
+
+    /*
+    To #mockitoVersion=4.7.0 or more
+            testImplementation group: 'org.mockito', name: 'mockito-core', version: "${mockitoVersion}"
+        testImplementation group: 'org.mockito', name: 'mockito-inline', version: "${mockitoVersion}"
+     */
 
     // sadly doesnt work => testImplementation 'com.github.fppt:jedis-mock:0.1.14'
 }
