update gradle to 8.3 with java 11

--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,9 @@ dependencies {
 
 jacocoTestReport {
     reports {
-        xml.enabled true
-        html.enabled true
+        xml.required = true
+        html.required = false
+        csv.required = false
     }
 }
 
