--- a/src/main/docker/docker-compose.yml
+++ b/src/main/docker/docker-compose.yml
@@ -3,6 +3,6 @@ services:
   redis:
     image: 'redis:5.0.13'
     hostname: redis
-    container_name: redis
+    container_name: redis5013
     ports:
       - '6379:6379'
